[tool.commitizen]
version = "1.1.2"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "pyproject.toml:version",
    "drfexts/__init__.py"
]

[tool.poetry]
name = "drfexts"
version = "1.1.2"
readme = "README.md"
description = "Django Restframework Utils"
authors = ["aiden <allaher@icloud.com>"]
keywords = ["django", "restframework"]
homepage = "https://github.com/aiden520/drfexts"
repository = "https://github.com/aiden520/drfexts"
license = "Apache-2.0"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
django = ">=3.2"
django-storages = ">=1.12.3"
django-filter = ">=21.1"
djangorestframework = ">=3.12.4"
pip = ">=21.3.1"
djangorestframework-csv = ">=2.1.1"
openpyxl = ">=3.0.9"
orjson = ">=3.8.0"
django-currentuser = ">=0.5.3"
drf-flex-fields = ">=0.9.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
coverage = "^6.2"
black = "^22.3.0"
pylint-django = "^2.5.0"
pre-commit = "^2.16.0"
commitizen = "^2.28.0"
pytest = "^7.1.2"

[tool.black]
line-length = 89
target-version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["scf", "config"]
default_section = "THIRDPARTY"
skip = ["venv/", ".venv/"]
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
